[package]
name = "cursor_reset_tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "reset_machine"
path = "reset_machine.rs"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
colored = "2.0"
sysinfo = "0.30"
rand = "0.8"
chrono = "0.4"
is_elevated = "0.1.2" # For checking admin privileges
directories = "5.0" # For APPDATA, LOCALAPPDATA paths
[target.'cfg(windows)'.dependencies]
winreg = "0.52"
